Fix number alignment

--- a/app/assets/styl/main.styl
+++ b/app/assets/styl/main.styl
@@ -158,17 +158,18 @@ footer
 // Section styles
 section.step
 	background: lighten($color-foreground-3, 12)
-	border-left: 2px solid $color-foreground
+	border-left: 3px solid $color-foreground
 	position: relative
 	padding: 0 $half-gutter $half-gutter $gutter
 	margin: 0 0 $half-gutter 0
 	text-shadow: 0 1px 0 rgba(#fff, .8)
 	$header-height = 60px
-	$header-padding = 25px
+	$header-padding = 24px
 	.number
 		position: absolute
 		background: $color-foreground
 		font-weight: 700
+		font-size: 1.15em
 		color: #fff
 		width: $header-height - $header-padding
 		height: @width
@@ -176,7 +177,8 @@ section.step
 		text-align: center
 		border-radius: 50%
 		top: ($header-padding / 2)
-		left: -(@width / 2)
+		left: -(@width / 2) - 2px
+		text-shadow: none
 	.contents
 		& > h1
 			font-weight: 700
